# api/swagger/swagger.json
@@ -20,7 +20,7 @@
     "host": "localhost:8888",
     "basePath": "/",
     "paths": {
-        "/api/v1/{templateID}": {
+        "/api/v1/tasks": {
             "get": {
                 "security": [
                     {
@@ -30,7 +30,7 @@
                         "BearerAuth": []
                     }
                 ],
-                "description": "Get a template by ID",
+                "description": "Get all tasks",
                 "consumes": [
                     "application/json"
                 ],
@@ -38,24 +38,199 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Template"
+                    "Task"
                 ],
-                "summary": "Get template by ID",
-                "operationId": "GetTemplateByID",
+                "summary": "Get all tasks",
+                "operationId": "GetAllTasks",
+                "responses": {
+                    "200": {
+                        "description": "Success",
+                        "schema": {
+                            "$ref": "#/definitions/dto.ViewTask"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/dto.BaseResponse"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/dto.BaseResponse"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/dto.BaseResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/dto.BaseResponse"
+                        }
+                    }
+                }
+            },
+            "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    },
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Create task",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Task"
+                ],
+                "summary": "Create task",
+                "operationId": "CreateTask",
+                "responses": {
+                    "200": {
+                        "description": "Success",
+                        "schema": {
+                            "$ref": "#/definitions/dto.ViewTask"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/dto.BaseResponse"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/dto.BaseResponse"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/dto.BaseResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/dto.BaseResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v1/tasks/{taskID}": {
+            "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    },
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Get task by ID",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Task"
+                ],
+                "summary": "Get task by ID",
+                "operationId": "GetTaskByID",
+                "responses": {
+                    "200": {
+                        "description": "Success",
+                        "schema": {
+                            "$ref": "#/definitions/dto.ViewTask"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/dto.BaseResponse"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/dto.BaseResponse"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/dto.BaseResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/dto.BaseResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v1/tasks/{taskID}/logs": {
+            "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    },
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Get task logs by ID",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Task Logs"
+                ],
+                "summary": "Get task logs by ID",
+                "operationId": "GetTaskLogsByID",
                 "parameters": [
                     {
-                        "type": "string",
-                        "description": "Template ID",
-                        "name": "templateID",
+                        "type": "integer",
+                        "description": "Task ID",
+                        "name": "taskID",
                         "in": "path",
                         "required": true
+                    },
+                    {
+                        "description": "Filter",
+                        "name": "filter",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/dto.TaskLogFilter"
+                        }
                     }
                 ],
                 "responses": {
                     "200": {
                         "description": "Success",
                         "schema": {
-                            "$ref": "#/definitions/dto.ViewTask"
+                            "$ref": "#/definitions/dto.ViewTaskLogs"
                         }
                     },
                     "400": {
@@ -105,11 +280,25 @@
                 }
             }
         },
+        "dto.TaskLogFilter": {
+            "type": "object",
+            "properties": {
+                "from": {
+                    "type": "integer"
+                },
+                "to": {
+                    "type": "integer"
+                }
+            }
+        },
         "dto.ViewTask": {
             "type": "object",
             "properties": {
                 "command": {
                     "type": "string"
+                },
+                "exit_code": {
+                    "type": "integer"
                 },
                 "id": {
                     "type": "integer"
@@ -117,8 +306,22 @@
                 "name": {
                     "type": "string"
                 },
+                "reason": {
+                    "type": "string"
+                },
                 "status": {
                     "$ref": "#/definitions/model.TaskStatus"
+                }
+            }
+        },
+        "dto.ViewTaskLogs": {
+            "type": "object",
+            "properties": {
+                "logs": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
                 }
             }
         },
